<resources>
    <string name="app_name">OBAJUShop</string>
    <string name="profile_nama">Hello, Saya Sri Rahayu Ningsih!</string>
    <string name="profile_follow_count">25</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_follow_button">Follow</string>

    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4.</string>
    <string name="content_specs_display">5.0 inches \n
    FHD AMOLED at 441ppi\n
    2.5D Corning Gorilla Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAH battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (WI-FI): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of CHARGING</string>
    <string name="content_prize">Rp. 7.500.000</string>

</resources>